--- a/index.html
+++ b/index.html
@@ -12,17 +12,21 @@
 <body>
     <header>
         <nav>
-            <img src="/assent/logo.svg" alt="">
-            <div>
-                <input type="text" name="Buscar" placeholder="Buscar" id="Buscar">
-                <button><img src="/assent/search.svg" alt=""></button>
+            <div class="navbar__logo">
+                <img src="/assent/logo.svg" alt="" class="navbar__img">
+                <H1>Mozart</H1>
             </div>
-            <img src="/assent/Tomatedeifinitivo.png" alt="">
+
+            <div class="navbar__busqueda">
+                <button><img src="/assent/search.svg" alt=""></button>
+                <input type="text" name="Buscar" placeholder="buscar" id="Buscar">
+            </div>
+            <img src="/assent/Tomatedeifinitivo.png" alt="" class="navbar__img">
         </nav>
     </header>
     <main>
         <section class="main__section__derecha"><!-- DERECHA -->
-            <div>
+            <div class="main__section__derecha__menu">
 
                 <h3>Menu</h3>
                 <button><img src="/assent/casa.svg" alt=""></button>
@@ -31,7 +35,7 @@
                 <button><img src="/assent/Telefono.svg" alt=""></button>
 
             </div>
-            <div>
+            <div class="main__section__derecha__setting">
 
                 <h3>Setting</h3>
                 <button><img src="/assent/Engranaje.svg" alt=""></button>
@@ -41,27 +45,31 @@
             </div>
         </section>
         <section class="main__section__Centro"><!-- medio -->
-            <div>
+            <div class="main__section__Centro__Historial"><!-- Historial -->
                 <h2>Historial</h2>
             </div>
-            <div>
+            <div class="main__section__Centro__para-ti"><!-- Para ti -->
                 <h2>Para ti</h2>
             </div>
-            <div>
-                <h2>Expolorar</h2>
-
-                <p>Pop</p>
-                <p>Indian</p>
-                <p>Novedades</p>
-                <p>Comedia</p>
-                <p>Podcast</p>
+            <div class="main__section__Centro__explorar"><!-- Esplorar -->
+                <h2>Explorar</h2>
+                <div><!-- crear una lista -->
+                    <p><b>Pop</b></p>
+                    <p><b>Indian</b></p>
+                    <p><b>Novedades</b></p>
+                    <p><b>Comedia</b></p>
+                    <p><b>Podcast</b></p>
+                </div>
             </div>
         </section>
-        <section>
+        <section class="main__section__izquierda">
             <h3>Play list</h3>
             <button><img src="/assent/Fav.svg" alt=""></button>
             <button><img src="/assent/Mas.svg" alt=""></button>
         </section>
     </main>
+    <footer>
+        <p>Próximamente</p>
+    </footer>
 </body>
 </html>
