--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="shortcut icon" href="/assent/logo.svg" type="image/x-icon">
     <title>Mozart</title>
     <link rel="stylesheet" href="style.css">
+
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
 </head>
 <body>
     <header>
@@ -71,5 +74,7 @@
     <footer>
         <p>Próximamente</p>
     </footer>
+    <script src="/script.js"></script> 
+    <!-- para llamar la carpeta de js -->
 </body>
 </html>
