--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="main__section__Centro__Historial"><!-- Historial -->
                 <h2>Historial</h2>
             </div>
-            <div class="main__section__Centro__para-ti"><!-- Para ti -->
+            <div id="tracklist" class="main__section__Centro__para-ti"><!-- Para ti -->
                 <h2>Para ti</h2>
             </div>
             <div class="main__section__Centro__explorar"><!-- Esplorar -->
