--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
             </div>
 
             <div class="navbar__busqueda">
-                <button><img src="/assent/search.svg" alt=""></button>
-                <input type="text" name="Buscar" placeholder="buscar" id="Buscar">
+                <span>
+                    <button><img src="/assent/search.svg" alt=""></button>
+                    <input type="text" name="Buscar" placeholder="buscar" id="Buscar">
+                </span>
             </div>
             <img src="/assent/Tomatedeifinitivo.png" alt="" class="navbar__img">
         </nav>
@@ -30,45 +32,53 @@
     <main>
         <section class="main__section__derecha"><!-- DERECHA -->
             <div class="main__section__derecha__menu">
-
-                <h3>Menu</h3>
-                <button><img src="/assent/casa.svg" alt=""></button>
-                <button><img src="/assent/amigo.svg" alt=""></button>
-                <button><img src="/assent/chat.svg" alt=""></button>
-                <button><img src="/assent/Telefono.svg" alt=""></button>
-
+                <span>
+                    <h3>Menu</h3>
+                    <button><img src="/assent/casa.svg" alt=""></button>
+                    <button><img src="/assent/amigo.svg" alt=""></button>
+                    <button><img src="/assent/chat.svg" alt=""></button>
+                    <button><img src="/assent/Telefono.svg" alt=""></button>
+                </span>
             </div>
             <div class="main__section__derecha__setting">
+                <span>
 
-                <h3>Setting</h3>
-                <button><img src="/assent/Engranaje.svg" alt=""></button>
-                <button><img src="/assent/Audifonos.svg" alt=""></button>
-                <button><img src="/assent/puerta.svg" alt=""></button>
+                    <h3>Setting</h3>
+                    <button><img src="/assent/Engranaje.svg" alt=""></button>
+                    <button><img src="/assent/Audifonos.svg" alt=""></button>
+                    <button><img src="/assent/puerta.svg" alt=""></button>
+                </span>
 
             </div>
         </section>
         <section class="main__section__Centro"><!-- medio -->
-            <div class="main__section__Centro__Historial"><!-- Historial -->
-                <h2>Historial</h2>
-            </div>
-            <div id="tracklist" class="main__section__Centro__para-ti"><!-- Para ti -->
-                <h2>Para ti</h2>
-            </div>
-            <div class="main__section__Centro__explorar"><!-- Esplorar -->
-                <h2>Explorar</h2>
-                <div><!-- crear una lista -->
-                    <p><b>Pop</b></p>
-                    <p><b>Indian</b></p>
-                    <p><b>Novedades</b></p>
-                    <p><b>Comedia</b></p>
-                    <p><b>Podcast</b></p>
+            <span>
+
+                <div class="main__section__Centro__Historial"><!-- Historial -->
+                    <h2>Historial</h2>
                 </div>
-            </div>
+                <div id="tracklist" class="main__section__Centro__para-ti"><!-- Para ti -->
+                    <h2>Para ti</h2>
+                </div>
+                <div class="main__section__Centro__explorar"><!-- Esplorar -->
+                    <h2>Explorar</h2>
+                    <div><!-- crear una lista -->
+                        <p><b>Pop</b></p>
+                        <p><b>Indian</b></p>
+                        <p><b>Novedades</b></p>
+                        <p><b>Comedia</b></p>
+                        <p><b>Podcast</b></p>
+                    </div>
+                </div>
+            </span>
         </section>
         <section class="main__section__izquierda">
-            <h3>Play list</h3>
-            <button><img src="/assent/Fav.svg" alt=""></button>
-            <button><img src="/assent/Mas.svg" alt=""></button>
+            <span>
+
+                <h3>Play list</h3>
+                <button><img src="/assent/Fav.svg" alt=""></button>
+                <button><img src="/assent/Mas.svg" alt=""></button>
+            </span>
         </section>
     </main>
     <footer>
