--- a/index.html
+++ b/index.html
@@ -54,20 +54,39 @@
         <section class="main__section__Centro"><!-- medio -->
             <span>
 
-                <div class="main__section__Centro__Historial"><!-- Historial -->
+                <div class="main__section__Centro__historial"><!-- Historial -->
                     <h2>Historial</h2>
+                    <div class="main__section__Centro__historial__orden"><!-- canciones del historial -->
+                        <div class="song">
+                            <button><img src="/assent/cancion1.jpg" alt=""></button>
+                            <p><b>Apricity</b></p>
+                            <p>Imala Zir</p>
+                        </div>
+                        <div class="song">
+                            <button><img src="/assent/cancion2.jpg" alt=""></button>
+                            <p><b>Solatium</b></p>
+                            <p>Imber Sun</p>
+                        </div>
+                        <div class="song">
+                            <img src="/assent/Mas.svg" alt="">
+                        </div>
+                    </div>
                 </div>
                 <div id="tracklist" class="main__section__Centro__para-ti"><!-- Para ti -->
                     <h2>Para ti</h2>
+                    <div>
+
+                    </div>
                 </div>
                 <div class="main__section__Centro__explorar"><!-- Esplorar -->
                     <h2>Explorar</h2>
                     <div><!-- crear una lista -->
-                        <p><b>Pop</b></p>
-                        <p><b>Indian</b></p>
-                        <p><b>Novedades</b></p>
-                        <p><b>Comedia</b></p>
-                        <p><b>Podcast</b></p>
+                        <button><b>Pop</b></button>
+                        <button><b>Indian</b></button>
+                        <button><b>Novedades</b></button>
+                        <button><b>Comedia</b></button>
+                        <button><b>Podcast</b></button>
+                        <button><b>phonks</b></button>
                     </div>
                 </div>
             </span>
