--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
                         </div>
                     </div>
                 </div>
-                <div id="tracklist" class="main__section__Centro__para-ti"><!-- Para ti -->
+                <div class="main__section__Centro__para-ti"><!-- Para ti -->
                     <h2>Para ti</h2>
-                    <div>
+                    <div id="track-list" class="main__section__Centro__para-ti__canciones">
 
                     </div>
                 </div>
