--- a/index.html
+++ b/index.html
@@ -101,7 +101,34 @@
         </section>
     </main>
     <footer>
-        <p>Próximamente</p>
+        <span>
+            <div class="footer__derecha"> 
+                <img src="/assent/cancion3.jpg" alt="">
+                <div>
+                  <p><b>nombre</b></p>
+                    <p>artista</p>
+                </div>
+                <button><img src="/assent/corazon.svg" alt=""></button>
+                <button><img src="/assent/atras.svg" alt=""></button>
+                <button><img src="/assent/play.svg" alt=""></button>
+                <button><img src="/assent/siguiente.svg" alt=""></button>
+                <button><img src="/assent/aleatorio.svg" alt=""></button>
+                <div><!-- volumen -->
+                    <img src="/assent/volumen.svg" alt="">
+                    <input type="range" name="volumen" id="volumen" class="volumen">
+                </div>
+                
+            </div>
+            <div class="footer__izquierda">
+             
+                <div>
+                    <p>3:22</p>
+                    <p>1:32</p>
+                </div>
+                <input type="range" name="minutos" id="minutos" class="minutos">
+
+            </div>
+        </span>
     </footer>
     <script src="/script.js"></script> 
     <!-- para llamar la carpeta de js -->
